preparing for testing - in progress

--- a/src/TestSandbox/SandBoxTest.twin/Resources/PlcStringResources.resx
+++ b/src/TestSandbox/SandBoxTest.twin/Resources/PlcStringResources.resx
@@ -58,84 +58,52 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Cylinder__ONE_" xml:space="preserve">
-    <value>Cylinder 1</value>
-    <comment>src\Examples\StandardCu.st,14</comment>
-  </data>
-  <data name="Cylinder__TWO_" xml:space="preserve">
-    <value>Cylinder 2</value>
-    <comment>src\Examples\StandardCu.st,16</comment>
-  </data>
-  <data name="Cylinder__THREE_" xml:space="preserve">
-    <value>Cylinder 3</value>
-    <comment>src\Examples\StandardCu.st,18</comment>
-  </data>
-  <data name="Cylinder__FOUR_" xml:space="preserve">
-    <value>Cylinder 4</value>
-    <comment>src\Examples\StandardCu.st,20</comment>
-  </data>
-  <data name="Cylinder__FIVE_" xml:space="preserve">
-    <value>Cylinder 5</value>
-    <comment>src\Examples\StandardCu.st,22</comment>
-  </data>
-  <data name="Cylinder__SIX_" xml:space="preserve">
-    <value>Cylinder 6</value>
-    <comment>src\Examples\StandardCu.st,24</comment>
-  </data>
-  <data name="Cylinder__SEVEN_" xml:space="preserve">
-    <value>Cylinder 7</value>
-    <comment>src\Examples\StandardCu.st,26</comment>
-  </data>
-  <data name="Cylinder__EIGHT_" xml:space="preserve">
-    <value>Cylinder 8</value>
-    <comment>src\Examples\StandardCu.st,28</comment>
-  </data>
   <data name="CounterDelay_DOT__" xml:space="preserve">
     <value>CounterDelay. </value>
-    <comment>src\Examples\StandardCu.st,137</comment>
+    <comment>src\TestedControlUnit\CuFragmentData.st,46</comment>
   </data>
   <data name="Kontrola__ONE__DOT_" xml:space="preserve">
     <value>Kontrola 1.</value>
-    <comment>src\Examples\StandardCu.st,145</comment>
+    <comment>src\TestedControlUnit\CuFragmentData.st,54</comment>
   </data>
   <data name="Kontrola__TWO__DOT_" xml:space="preserve">
     <value>Kontrola 2.</value>
-    <comment>src\Examples\StandardCu.st,147</comment>
+    <comment>src\TestedControlUnit\CuFragmentData.st,56</comment>
   </data>
   <data name="Kontrola__THREE__DOT_" xml:space="preserve">
     <value>Kontrola 3.</value>
-    <comment>src\Examples\StandardCu.st,149</comment>
+    <comment>src\TestedControlUnit\CuFragmentData.st,58</comment>
   </data>
   <data name="Kontrola__FOUR__DOT_" xml:space="preserve">
     <value>Kontrola 4.</value>
-    <comment>src\Examples\StandardCu.st,151</comment>
+    <comment>src\TestedControlUnit\CuFragmentData.st,60</comment>
   </data>
   <data name="Kontrola__FIVE__DOT_" xml:space="preserve">
     <value>Kontrola 5.</value>
-    <comment>src\Examples\StandardCu.st,153</comment>
+    <comment>src\TestedControlUnit\CuFragmentData.st,62</comment>
   </data>
   <data name="Kontrola__SIX__DOT_" xml:space="preserve">
     <value>Kontrola 6.</value>
-    <comment>src\Examples\StandardCu.st,155</comment>
+    <comment>src\TestedControlUnit\CuFragmentData.st,64</comment>
   </data>
   <data name="Kontrola__SEVEN__DOT_" xml:space="preserve">
     <value>Kontrola 7.</value>
-    <comment>src\Examples\StandardCu.st,157</comment>
+    <comment>src\TestedControlUnit\CuFragmentData.st,66</comment>
   </data>
   <data name="Kontrola__EIGHT__DOT_" xml:space="preserve">
     <value>Kontrola 8.</value>
-    <comment>src\Examples\StandardCu.st,159</comment>
+    <comment>src\TestedControlUnit\CuFragmentData.st,68</comment>
   </data>
   <data name="AUTOMAT" xml:space="preserve">
     <value>AUTOMAT</value>
-    <comment>src\Examples\StandardCu.st,435</comment>
+    <comment>src\TestedControlUnit\CuModes\AutoMode.st,8</comment>
   </data>
   <data name="GROUND" xml:space="preserve">
     <value>GROUND</value>
-    <comment>src\Examples\StandardCu.st,628</comment>
+    <comment>src\TestedControlUnit\CuModes\GroundMode.st,8</comment>
   </data>
   <data name="SERVICE" xml:space="preserve">
     <value>SERVICE</value>
-    <comment>src\Examples\StandardCu.st,750</comment>
+    <comment>src\TestedControlUnit\CuModes\ServiceMode.st,8</comment>
   </data>
 </root>
