--- a/src/templates.simple/axpansion/twin/Resources/PlcStringResources.resx
+++ b/src/templates.simple/axpansion/twin/Resources/PlcStringResources.resx
@@ -58,6 +58,34 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Next_on_Passed" xml:space="preserve">
+    <value>Next on Passed</value>
+    <comment>src\CommonData\UnitHeader.st,4</comment>
+  </data>
+  <data name="Next_on_Failed" xml:space="preserve">
+    <value>Next on Failed</value>
+    <comment>src\CommonData\UnitHeader.st,7</comment>
+  </data>
+  <data name="Cycle_time" xml:space="preserve">
+    <value>Cycle time</value>
+    <comment>src\CommonData\UnitHeader.st,11</comment>
+  </data>
+  <data name="Clean_loop_time" xml:space="preserve">
+    <value>Clean loop time</value>
+    <comment>src\CommonData\UnitHeader.st,15</comment>
+  </data>
+  <data name="Operation_started" xml:space="preserve">
+    <value>Operation started</value>
+    <comment>src\CommonData\UnitHeader.st,19</comment>
+  </data>
+  <data name="Operation_end" xml:space="preserve">
+    <value>Operation end</value>
+    <comment>src\CommonData\UnitHeader.st,23</comment>
+  </data>
+  <data name="Operatod_id" xml:space="preserve">
+    <value>Operatod id</value>
+    <comment>src\CommonData\UnitHeader.st,27</comment>
+  </data>
   <data name="Home_sensor" xml:space="preserve">
     <value>Home sensor</value>
     <comment>src\Components\Cylinder.st,19</comment>
@@ -73,6 +101,38 @@
   <data name="Move_work_signal" xml:space="preserve">
     <value>Move work signal</value>
     <comment>src\Components\Cylinder.st,32</comment>
+  </data>
+  <data name="Last_station" xml:space="preserve">
+    <value>Last station</value>
+    <comment>src\CommonData\Entity\EntityData.st,4</comment>
+  </data>
+  <data name="Next_station" xml:space="preserve">
+    <value>Next station</value>
+    <comment>src\CommonData\Entity\EntityData.st,7</comment>
+  </data>
+  <data name="Operations_Opened" xml:space="preserve">
+    <value>Operations Opened</value>
+    <comment>src\CommonData\Entity\EntityData.st,10</comment>
+  </data>
+  <data name="Results" xml:space="preserve">
+    <value>Results</value>
+    <comment>src\CommonData\Entity\EntityData.st,13</comment>
+  </data>
+  <data name="Carrier" xml:space="preserve">
+    <value>Carrier</value>
+    <comment>src\CommonData\Entity\EntityData.st,16</comment>
+  </data>
+  <data name="Is_empty" xml:space="preserve">
+    <value>Is empty</value>
+    <comment>src\CommonData\Entity\EntityData.st,20</comment>
+  </data>
+  <data name="Is_Master" xml:space="preserve">
+    <value>Is Master</value>
+    <comment>src\CommonData\Entity\EntityData.st,24</comment>
+  </data>
+  <data name="Reset_or_ground_position_performed" xml:space="preserve">
+    <value>Reset or ground position performed</value>
+    <comment>src\CommonData\Entity\EntityData.st,28</comment>
   </data>
   <data name="LOAD_PROCESS_SETTINGS" xml:space="preserve">
     <value>LOAD PROCESS SETTINGS</value>
@@ -113,5 +173,13 @@
   <data name="RESTORE" xml:space="preserve">
     <value>RESTORE</value>
     <comment>src\templates\unit\GroundSequence.st,49</comment>
+  </data>
+  <data name="StarterUnitTemplate" xml:space="preserve">
+    <value>StarterUnitTemplate</value>
+    <comment>src\templates\starterunit\DataManagers\FragmentsProcessDataManager.st,13</comment>
+  </data>
+  <data name="UnitTemplate" xml:space="preserve">
+    <value>UnitTemplate</value>
+    <comment>src\templates\unit\DataManagers\FragmentsProcessDataManager.st,13</comment>
   </data>
 </root>
