--- a/src/templates.simple/axpansion/twin/Resources/PlcStringResources.resx
+++ b/src/templates.simple/axpansion/twin/Resources/PlcStringResources.resx
@@ -170,6 +170,10 @@
     <value>SERVICE</value>
     <comment>src\templates\starterunit\ServiceMode.st,10</comment>
   </data>
+  <data name="New_gripper" xml:space="preserve">
+    <value>New gripper</value>
+    <comment>src\templates\unit\Components.st,17</comment>
+  </data>
   <data name="Last_station" xml:space="preserve">
     <value>Last station</value>
     <comment>src\CommonData\Process\Entity\EntityData.st,5</comment>
