--- a/src/templates.simple/axpansion/twin/Resources/PlcStringResources.resx
+++ b/src/templates.simple/axpansion/twin/Resources/PlcStringResources.resx
@@ -128,15 +128,31 @@
   </data>
   <data name="GET_ID" xml:space="preserve">
     <value>GET ID</value>
-    <comment>src\templates\starterunit\AutomatSequence.st,62</comment>
+    <comment>src\templates\starterunit\AutomatSequence.st,89</comment>
   </data>
   <data name="GET_DATA" xml:space="preserve">
     <value>GET DATA</value>
-    <comment>src\templates\starterunit\AutomatSequence.st,69</comment>
+    <comment>src\templates\starterunit\AutomatSequence.st,109</comment>
+  </data>
+  <data name="Dialog_notify" xml:space="preserve">
+    <value>Dialog notify</value>
+    <comment>src\templates\starterunit\AutomatSequence.st,119</comment>
+  </data>
+  <data name="Dialog_success" xml:space="preserve">
+    <value>Dialog success</value>
+    <comment>src\templates\starterunit\AutomatSequence.st,136</comment>
+  </data>
+  <data name="Dialog_Warning" xml:space="preserve">
+    <value>Dialog Warning</value>
+    <comment>src\templates\starterunit\AutomatSequence.st,152</comment>
+  </data>
+  <data name="Dialog_danger" xml:space="preserve">
+    <value>Dialog danger</value>
+    <comment>src\templates\starterunit\AutomatSequence.st,168</comment>
   </data>
   <data name="UPDATE_DATA" xml:space="preserve">
     <value>UPDATE DATA</value>
-    <comment>src\templates\starterunit\AutomatSequence.st,88</comment>
+    <comment>src\templates\starterunit\AutomatSequence.st,227</comment>
   </data>
   <data name="AUTOMAT" xml:space="preserve">
     <value>AUTOMAT</value>
@@ -148,15 +164,15 @@
   </data>
   <data name="READ_PERSISTENT_SETTINGS" xml:space="preserve">
     <value>READ PERSISTENT SETTINGS</value>
-    <comment>src\templates\starterunit\GroundSequence.st,77</comment>
+    <comment>src\templates\starterunit\GroundSequence.st,78</comment>
   </data>
   <data name="READ_TECHNOLOGY_SETTINS" xml:space="preserve">
     <value>READ TECHNOLOGY SETTINS</value>
-    <comment>src\templates\starterunit\GroundSequence.st,123</comment>
+    <comment>src\templates\starterunit\GroundSequence.st,124</comment>
   </data>
   <data name="SAVE_DATA" xml:space="preserve">
     <value>SAVE DATA</value>
-    <comment>src\templates\starterunit\GroundSequence.st,165</comment>
+    <comment>src\templates\starterunit\GroundSequence.st,166</comment>
   </data>
   <data name="GROUND" xml:space="preserve">
     <value>GROUND</value>
