--- a/src/core/src/AXOpen.Core.Blazor/Resources/StringResources.resx
+++ b/src/core/src/AXOpen.Core.Blazor/Resources/StringResources.resx
@@ -120,6 +120,12 @@
   <data name="Cancel" xml:space="preserve">
     <value>Cancel</value>
   </data>
+  <data name="Close" xml:space="preserve">
+    <value>Close</value>
+  </data>
+  <data name="Close all" xml:space="preserve">
+    <value>Close all</value>
+  </data>
   <data name="Log in" xml:space="preserve">
     <value>Log in</value>
   </data>
